# app/Http/Resources/ProductResource.php
@@ -15,8 +15,6 @@ use OpenApi\Attributes as OA;
         new OA\Property(property: 'slug', type: 'string'),
         new OA\Property(property: 'team', type: 'string'),
         new OA\Property(property: 'year', type: 'integer'),
-        new OA\Property(property: 'condition', type: 'string'),
-        new OA\Property(property: 'rarity', type: 'string'),
         new OA\Property(property: 'description', type: 'string'),
         new OA\Property(property: 'price', type: 'integer'),
         new OA\Property(property: 'old_price', type: 'integer', nullable: true),
@@ -51,8 +49,6 @@ class ProductResource extends JsonResource
             'slug' => $this->slug,
             'team' => $this->team,
             'year' => $this->year,
-            'condition' => $this->condition?->value,
-            'rarity' => $this->rarity?->value,
             'description' => $this->description,
             'price' => $this->price,
             'old_price' => $this->old_price,
